--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
-  <link rel="stylesheet" href="./style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="card">
@@ -18,7 +18,7 @@
           autocomplete="false"
         >
         <button class="search-btn" id="search-btn">
-          <img src="images/search.png" alt="search button">
+          <img src="public/images/search.png" alt="search button">
         </button>
       </div>
       <div class="results">
@@ -26,19 +26,19 @@
       </div>
     </div>
     <div class="weather">
-      <img src="images/snow.png" alt="weather" class="weather-icon">
+      <img src="public/images/snow.png" alt="weather" class="weather-icon">
       <h1 class="temp">2°c</h1>
       <h2 class="city">New York</h2>
       <div class="details">
         <div class="col">
-          <img src="images/humidity.png" alt="humidity">
+          <img src="public/images/humidity.png" alt="humidity">
           <div>
             <h3 class="humidity">50%</h3>
             <p>Humidity</p>
           </div>
         </div>
         <div class="col">
-          <img src="images/wind.png" alt="wind">
+          <img src="public/images/wind.png" alt="wind">
           <div>
             <h3 class="wind">20 km/h</h3>
             <p>Wind Speed</p>
@@ -48,5 +48,5 @@
     </div>
   </div>
 </body>
-<script src="src/index.js"></script>
+<script src="index.js"></script>
 </html>
