--- a/index.html
+++ b/index.html
@@ -25,22 +25,23 @@
         <ul class="city-results"></ul>
       </div>
     </div>
-    <div class="weather">
-      <img src="public/images/snow.png" alt="weather" class="weather-icon">
-      <h1 class="temp">2°c</h1>
-      <h2 class="city">New York</h2>
+    <div id="loader" class="loader"></div>
+    <div class="weather-content hidden">
+      <img src="" alt="weather" class="weather-icon">
+      <h1 class="temp"></h1>
+      <h2 class="city"></h2>
       <div class="details">
         <div class="col">
           <img src="public/images/humidity.png" alt="humidity">
           <div>
-            <h3 class="humidity">50%</h3>
+            <h3 class="humidity"></h3>
             <p>Humidity</p>
           </div>
         </div>
         <div class="col">
           <img src="public/images/wind.png" alt="wind">
           <div>
-            <h3 class="wind">20 km/h</h3>
+            <h3 class="wind"></h3>
             <p>Wind Speed</p>
           </div>
         </div>
